--- a/next-trendy-client/package.json
+++ b/next-trendy-client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
@@ -34,7 +35,6 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
-    "react-image-magnify": "^2.7.4",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
