--- a/next-trendy-client/package.json
+++ b/next-trendy-client/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "react-zoom-pan-pinch": "^3.6.1",
     "redux-persist": "^6.0.0",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
