search implementation done

--- a/next-trendy-client/tsconfig.json
+++ b/next-trendy-client/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es2015", // or "es2016", "es2017", etc.
+    "downlevelIteration": true,
+    "lib": ["dom", "dom.iterable", "esnext","es2015"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -21,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(search)/product/SearchProducts.tsx"],
   "exclude": ["node_modules"]
 }
