--- a/next-trendy-client/package.json
+++ b/next-trendy-client/package.json
@@ -44,6 +44,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "react-zoom-pan-pinch": "^3.6.1",
