text editor added successfully added ui

--- a/next-trendy-client/package.json
+++ b/next-trendy-client/package.json
@@ -37,6 +37,7 @@
     "embla-carousel-autoplay": "^8.1.8",
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.28",
+    "html-react-parser": "^5.1.16",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.428.0",
     "lucide-react": "^0.428.0",
@@ -46,6 +47,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "react-zoom-pan-pinch": "^3.6.1",
