order created done

--- a/next-trendy-client/package.json
+++ b/next-trendy-client/package.json
@@ -38,6 +38,9 @@
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.28",
     "html-react-parser": "^5.1.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.428.0",
     "lucide-react": "^0.428.0",
